crates/test-ui/ui/msg_send_underspecified.stderr
error[E0282]: type annotations needed
 --> ui/msg_send_underspecified.rs
  |
  |     let _: &NSObject = &*unsafe { msg_send![obj, description] };
  |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
